CHANGES FROM 2.8 to X.X

* New "terminal" colour allowing options to use the terminal default
  colour rather than inheriting the default from a parent option.

* Do not move the cursor in copy mode when the mouse wheel is used.

* Use the same working directory rules for jobs as new windows rather
  than always starting in the user's home.

* Allow panes to be one line or column in size.

* Go to last line when goto-line number is out of range in copy mode.

* Yank previously cut text if any with C-y in the command prompt, only
  use the buffer if no text has been cut.

* Add q: format modifier to quote shell special characters.

* Add StatusLeft and StatusRight mouse locations (keys such as
  MouseDown1StatusLeft) for the status-left and status-right areas of
  the status line.

* Add -Z to find-window.

* Support for windows larger than the client. This adds two new
  options, window-size and default-size, and a new command,
  resize-window. The force-width and force-height options and the
  session_width and session_height formats have been removed.

  The new window-size option tells tmux how to work out the size of
  windows: largest means it picks the size of the largest session,
  smallest the smallest session (similar to the old behaviour) and
  manual means that it does not automatically resize
  windows. aggressive-resize modifies the choice of session for
  largest and smallest as it did before.

  If a window is in a session attached to a client that is too small,
  only part of the window is shown. tmux attempts to keep the cursor
  visible, so the part of the window displayed is changed as the
  cursor moves (with a small delay, to try and avoid excess redrawing
  when applications redraw status lines or similar that are not
  currently visible).

  Drawing windows which are larger than the client is not as efficient
  as those which fit, particularly when the cursor moves, so it is
  recommended to avoid using this on slow machines or networks (set