@@ -2627,6 +2627,11 @@ passed through to applications running in
 .Nm .
 Attached clients should be detached and attached again after changing this
 option.
+.It Xo Ic full-search
+.Op Ic on | off
+.Xc
+When enabled (the default), search in copy-mode will cover the full history
+and highlight matching text with the number of results.
 .It Ic history-file Ar path
 If not empty, a file to which
 .Nm
